# Detect_My_Jiggler

./: CMakeLists.txt  LICENSE  README.md  app.manifest  detection.cpp  detection.h  detection_constants.h  device_ids.h  device_utils.cpp  device_utils.h  globals.cpp  globals.h  known_devices.cpp  known_devices.h  live_chart.cpp  live_chart.h  main.cpp  mouse_device.h  ui.cpp  ui.h
